fixtures/semantic/invalid/07-vr-r1-unresolved-reference.fl
component MissingReference(
  prop label-text: text
) {
  surface {
    text {
      content: @missing
    }
  }
}
